# Rust-Scribble

./: .deepsource.toml  .gitignore  Dockerfile  README.md  messages.rs
.github/: scribble-server-deployment.yaml
.github/workflows/: build-and-push-image.yml
client/: Cargo.toml
client/src/: app.rs  clientstate.rs  gamestate.rs  lib.rs  main.rs  network.rs  network_plugin.rs  painting.json  painting.rs  ui.rs
common/: Cargo.toml
common/src/: gamestate_common.rs  gamestate_server.rs  lib.rs  messages_common.rs  network_common.rs
server/: Cargo.toml  Dockerfile
server/assets/: words.txt
server/src/: gamestate.rs  lobby.rs  lobbystate.rs  main.rs  network.rs  rewardstrategy.rs  scribblserver.rs  serverstate.rs
