[package]
name = "rust_scribble"
version = "0.1.0"
authors = []
edition = "2021"

[dependencies]
rust_scribble_common = {path = "../common"}

egui = "0.18.0"
eframe = { version = "0.18.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
tracing-subscriber = "0.3"
x25519-dalek = "1.2.0"
rand_core = { version = "0.5", default-features = false }
chacha20poly1305 = { version = "0.9.0", features = ["stream"] }
aead = "0.4.3"
generic-array = "0.14.5"
rand = "0.5.5"
serde_json = "1.0.81"
crc32fast = "1.3.2"
rayon="1.5.3"
bevy = "0.7.0"
bevy_egui = "0.14.0"




[profile.release]
opt-level = 2 # fast and small wasm


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/egui" }
# eframe = { path = "../egui/eframe" }
