[package]
name = "rust_scribble"
version = "0.1.0"
authors = []
edition = "2021"

[features]
no-encryption = ["rust_scribble_common/no-encryption"]

[dependencies]
rust_scribble_common = {path = "../common", default-features = false, features = ["no-encryption"]}

egui = {version="0.18.1", features = ["persistence"]}
serde = { version = "1", features = ["derive"] }
tracing-subscriber = "0.3"
x25519-dalek = "1.2.0"
rand_core = { version = "0.5", default-features = false }
chacha20poly1305 = { version = "0.9.0", features = ["stream"] }
aead = "0.4.3"
generic-array = "0.14.5"
rand = "0.5.5"
serde_json = "1.0.81"
crc32fast = "1.3.2"
rayon="1.5.3"
bevy = "0.7.0"
bevy_egui = "0.14.0"

[profile.release]
opt-level = 2
