[package]
name = "rust_scribble_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x25519-dalek = {version="1.2.0", features = ["reusable_secrets"]}
rand_core = { version = "0.5", default-features = false }
chacha20poly1305 = { version = "0.9.0", features = ["stream"] }
aead = "0.4.3"
generic-array = "0.14.5"
rand = "0.5.5"
serde_json = "1.0.81"
crc32fast = "1.3.2"
rayon="1.5.3"
serde = { version = "1", features = ["derive"] }
bevy_egui = "0.14.0"
bevy = "0.7.0"
egui = {version="0.18.1", features = ["persistence"]}