[package]
name = "rust_scribble_server"
version = "0.1.0"
authors = ["Anna Thum <A.Thum@campus.lmu.de>",
"Johannes Merkt <Johannes.Merkt@campus.lmu.de>",
"Julien Cardinal <Julien.Cardinal@campus.lmu.de>",
"Leonard Ganz <Leonard.Ganz@campus.lmu.de>",
"Terence Stenvold <Terence.Stenvold@campus.lmu.de>"]
edition = "2021"

[features]
no-encryption = ["rust_scribble_common/no-encryption"]

[dependencies]
x25519-dalek = {version="1.2.0", features = ["reusable_secrets"]}
rand_core = { version = "0.5", default-features = false }
rand = "0.5"
chacha20poly1305 = { version = "0.9.0", features = ["stream"] }
aead = "0.4.3"
generic-array = "0.14.5"
serde_json = "1.0.81"
serde = { version = "1.0", features = ["derive"] }
crc32fast = "1.3.2"
rayon = "1.5.3"
clap = { version = "3.2.8", features = ["derive"] }
delegate = "0.7.0"
parking_lot = "0.12.1"
schedule_recv = "0.1.0"
edit-distance = "2.1.0"
rust_scribble_common = {path = "../common"}

[profile.release]
opt-level = 2